@@ -1,3 +1,8 @@
+2020-03-15  Kevin Ushey  <kevinushey@gmail.com>
+
+	* inst/include/Rcpp/exceptions_impl.h: Ensure <execinfo.h> is included
+	into global namespace; refactor detection of demangler support
+
 2020-03-13  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Date, Version): Release 1.0.4
